--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="/style.css" />  
 </head>
+
 <body>
-    
+    <div class="Main">
+        Parent
+        <p class="para1">Child 1</p>
+        <p class="para2">Child 2</p>
+        <p class="para3">Child 3</p>
+    </div>
 </body>
+
 </html>
